# haven

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  =5  LICENSE  README.md  conftest.py  environment-designer.yml  environment-explicit.txt  environment-temp.yml  environment.yml  environment_2022_2.yml  ipython_startup.py  main.ui  notes.org  pixi.toml  preprocessor_bug.py  pyproject.toml  pytest.ini  voltmeter.ui  voltmeters.ui
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  device_support.md  feature_request.md
.github/workflows/: ci.yml  tests.yml
capissen38/: __init__.py  __init__.py~  motors.py
docs/: conf.py  index.rst  requirements.txt
docs/how_to_guides/: adding_devices.rst  environment_configuration.rst  index.rst
docs/howto/: define_new_motor.rst  energy_scans.rst  index.rst
docs/topic_guides/: area_detectors.rst  asymmetric_analyzer.rst  beamline_configuration.rst  changing_haven.rst  energy_scans.rst  exporting.rst  fluorescence_detectors.rst  fly_scanning.rst  hardware_triggering.rst  index.rst  instrument_registry.rst  motor_positions.rst  shutters_and_filters.rst  xdi_writer.rst
docs/tutorials/: area_detectors.rst  fly_scanning.ipynb  index.rst  knife_scan.ipynb  xafs_energy_scan.ipynb  xafs_energy_scan.rst
firefly/: __init__.py  application.py  area_detector_viewer.py  area_detector_viewer.ui  bss.py  bss.ui  button.py  camera.py  camera.ui  camera_viewer.py  camera_viewer.ui  cameras.py  cameras.ui  display.py  energy.py  energy.ui  engine_runner.py  firefly.qss  firefly_ui.py  launcher.py  main.py  main.ui  main_window.py  motor.py  motor.ui  ophyd_plugin.py  queue_button.py  queue_client.py  run_browser.py  run_browser.ui  run_client.py  run_viewer.ui  sample_viewer.ui  status.py  status.ui  voltmeter.py  voltmeter.ui  voltmeters.py  voltmeters.ui  xafs_scan.py  (+8 more)
haven/: __init__.py  _iconfig.py  catalog.py  detectors.py  energy_ranges.py  exceptions.py  iconfig_default.toml  motor_position.py  motors.py  positioners.py  preprocessors.py  progress_bar.py  queueserver.sh  queueserver_startup.py  run_engine.py  signal.py  simulated_ioc.py  typing.py  xdi_writer.py
haven/instrument/: __init__.py  aps.py  area_detector.py  camera.py  device.py  energy_positioner.py  fluorescence_detector.py  heater.py  instrument_registry.py  ion_chamber.py  lerix.py  load_instrument.py  monochromator.py  motor.py  power_supply.py  scaler_triggered.py  shutter.py  slits.py  stage.py  xray_source.py
haven/plans/: __init__.py  align_motor.py  align_slits.py  auto_gain.py  beam_properties.py  energy_scan.py  mono_ID_calibration.py  mono_gap_calibration.py  record_dark_current.py  set_energy.py  xafs_scan.py
haven/tests/: ioc_apsbss.py  ioc_area_detector.py  ioc_dxp.py  ioc_mono.py  ioc_motor.py  ioc_preamp.py  ioc_ptc10.py  ioc_scaler.py  ioc_simple.py  ioc_undulator.py  test_catalogs.py  tiled_example.py
mime/: x-hdf5.xml  x-nexus.xml  x-xdi.xml
src/: conftest.py
src/firefly/: __init__.py  action.py  application.py  area_detector_overlay.ui  area_detector_roi.ui  area_detector_viewer.py  area_detector_viewer.ui  asymmotron.py  asymmotron.ui  beamline_components_rc.py  bss.py  bss.ui  button.py  camera.py  camera.ui  cameras.py  cameras.ui  component_selector.py  conftest.py  controller.py  data_noise.py  detector_list.py  display.py  energy.py  energy.ui  exceptions.py  filters.py  filters_row.ui  firefly.qss  ioc.ui  iocs.py  iocs.ui  ion_chamber.py  ion_chamber.ui  kafka_client.py  kb_mirrors.py  kb_mirrors.ui  launcher.py  live_viewer.py  log_viewer.ui  (+40 more)
src/haven/: __init__.py  _iconfig.py  _tiled_writer.py  bss.py  catalog.py  conftest.py  constants.py  device.py  energy_ranges.py  exceptions.py  export.py  iconfig.py  iconfig_default.toml  iconfig_schema.py  iconfig_testing.toml  instrument.py  ipython_startup.ipy  ipython_startup.py  load_instrument.py  logging.py  motor_position.py  positioner.py  preprocessors.py  progress_bar.py  protocols.py  run_engine.py  simulated_ioc.py  specs.py  startup.py  tiled_writer.py  typing.py  units.py  utils.py  xdi_export.py  xdi_writer.py
src/haven_qserver/: README.rst  databroker_consumer.py  kafka_server.properties  launch_queueserver.py  local_config.yml  qs_config.yml  queueserver_user_group_permissions.yaml  startup.py
src/queueserver/: databroker_consumer.py  launch_queueserver.py  mongo_consumer.py  queueserver.sh  queueserver_startup.py  tiled_consumer.py
test_iocs/fixtures/: motor_positions.yaml
tests/: HelloMark.py  README.md  conftest.py  dxp_3px_4elem_Fe55.txt  iconfig_testing.toml  run_engine.py  simulated_ioc.py  test_align_motor.py  test_application.py  test_aps.py  test_area_detector.py  test_area_detector_display.py  test_beam_height.py  test_beam_properties.py  test_bss_display.py  test_camera.py  test_camera_viewer_display.py  test_cameras_display.py  test_count_window.py  test_detector_list.py  test_device.py  test_energy_display.py  test_energy_positioner.py  test_energy_xafs_scan.py  test_engine_runner.py  test_fluorescence.py  test_fluorescence_detectors.py  test_fly_plans.py  test_heater.py  test_iconfig.py  test_iconfig.toml  test_instrument_registry.py  test_ion_chamber.py  test_lerix.py  test_main_window.py  test_mono_ID_calibration_plan.py  test_monochromator.py  test_motor.py  test_motor_menu.py  test_motors.py  (+22 more)
tests/end_to_end/: conftest.py  test_devices.py  test_focus_kb_mirrors.py  test_plans.py
tests/firefly/: beamline_components_rc.py  test_bss_display.py  test_component_selector.py  test_controller.py  test_detector_list.py  test_energy_display.py  test_iocs_display.py  test_main_window.py  test_ophyd_connection.py  test_pydm_plugin.py  test_queue_client.py  test_relative_checkbox.py  test_status.py  test_voltmeters.py  test_xrf_detector_display.py
tests/fixtures/: motor_positions.yaml
tests/haven/: test_energy_ranges.py  test_fluorescence_detectors.py  test_iconfig.py  test_iconfig.toml  test_iconfig_old.py  test_instrument.py  test_instrument_registry.py  test_positioner.py  test_run_engine.py  test_save_motor_positions.py  (+4 more)
(+519 files in other folders)
