[project]
name = "haven-spc"
version = "2025.02.1"
authors = [
  { name="Mark Wolfman", email="wolfman@anl.gov" },
]
description = "Tools and GUI for running the spectroscopy group beamlines at the Advanced Photon Source."
readme = "README.md"
# requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
license = "BSD-3-clause"
keywords = ["synchrotron", "xray", "bluesky"]
dependencies = [
    # Managed by pixi
    # To-do: what dependencies do we actually need for e.g. pip install.
]

[project.urls]
"Homepage" = "https://haven-spc.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/spc-group/haven/issues"

[project.entry-points."pydm.data_plugin"]
HavenPlugin = "firefly.pydm_plugin:HavenPlugin"

[project.scripts]
haven_config = "haven._iconfig:print_config_value"

[project.gui-scripts]
firefly = "firefly.launcher:main"
firefly_cameras = "firefly.launcher:cameras"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/haven", "src/firefly", "src/haven_qserver"]

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "F401"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/haven/_version.py"
versionfile_build = "haven/_version.py"
tag_prefix = "haven-"
parentdir_prefix = "haven-"

[tool.mypy]
files = [
    'src/haven/', 'tests/haven',
    'src/firefly/bss.py', 'tests/firefly/test_bss_display.py',
    'src/firefly/energy.py', 'tests/firefly/test_energy_display.py',
    'src/firefly/devices/axilon_monochromator.py', 'tests/firefly/devices/test_monochromator.py',
    'src/firefly/devices/undulator.py', 'tests/firefly/devices/test_undulator.py',
    'src/firefly/plans/count.py', 'tests/firefly/plans/test_count.py',
    'src/firefly/plans/duration_label.py', 'tests/firefly/plans/test_duration_label.py',
    'src/firefly/plans/metadata.py', 'tests/firefly/test_metadata_widget.py',
    'src/firefly/plans/move.py', 'tests/firefly/plans/test_move.py',
    'src/firefly/plans/regions.py', 'tests/firefly/plans/test_regions.py',
    'src/firefly/plans/display.py', 'tests/firefly/plans/test_display.py',
    'src/firefly/plans/line_scan.py', 'tests/firefly/plans/test_line_scan.py',
    'src/firefly/plans/grid_scan.py', 'tests/firefly/plans/test_grid_scan.py',
    'src/firefly/plans/relative_checkbox.py', 'tests/firefly/test_relative_checkbox.py',
    'src/firefly/plans/util.py',
    'src/firefly/plans/xafs_scan.py', 'tests/firefly/plans/test_xafs_scan.py',
    'tests/integration/',
]
follow_imports = "skip"
follow_untyped_imports = true
exclude = [
    # To-do: Get these files to pass the type-checker
    "src/haven/devices/srs570.py",
    "src/haven/_iconfig.py",
    "src/haven/instrument.py",
]
